--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,17 @@
     "seed": "npx tsx scripts/seed.ts"
   },
   "dependencies": {
-    "next": "^14.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "pg": "^8.11.0"
+    "next": "^16.1.4",
+    "pg": "^8.11.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/pg": "^8.10.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@types/react": "^19.2.9",
+    "@types/react-dom": "^19.2.3",
     "tsx": "^4.7.0",
     "typescript": "^5.0.0"
   }
