--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,18 @@
     "seed": "npx tsx scripts/seed.ts"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.563.0",
     "next": "^16.1.4",
     "pg": "^8.11.0",
+    "postcss": "^8.5.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
@@ -22,6 +29,7 @@
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
     "tsx": "^4.7.0",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.0.0"
   }
 }
